fixed spacing/sizing of each section to fit content properly in all views; added gamecard info; need to fix stellar mobile->desktop disable (figure out how)

--- a/style.scss
+++ b/style.scss
@@ -297,6 +297,7 @@ h3{
 		min-height:125px;
 		bottom:0;
 		background:url('groundbg_mobile.png') top center no-repeat;
+		background-size:cover;
 		@media only screen and (max-width:768px) and (orientation:landscape){
 			min-height:50px;
 		}
@@ -330,7 +331,7 @@ h3{
 }
 
 .psPrimary{
-	// // min-height: 360px !important;
+	// min-height: 360px !important;
 	// @media only screen and (max-width:768px) and (orientation:landscape){
 	// 	min-height: 360px !important;
 	// }
@@ -352,11 +353,15 @@ h3{
 .psGame{
 	background:url('skybg2_mobile2.gif') bottom center no-repeat fixed;
 	background-size:cover;
+	min-height:500px;
+	@media only screen and (max-width:768px) and (orientation:landscape) {
+		min-height:360px !important;
+	}
 	z-index:11;
 }
 
 .psAbout{
-	background:url('skybg3_mobile.gif') bottom center no-repeat fixed;
+	background:url('skybg3_mobile.gif') top 40px center no-repeat fixed;
 	background-size: cover;
 	z-index:11;
 
@@ -427,7 +432,8 @@ h3{
 	}
 
 	aside{
-		padding: 1em 0;
+		font-size:1.5rem;
+		padding: 1em ;
 		color:white;
 	}
 }
@@ -563,13 +569,18 @@ h3{
 .gameCards{
 
 	article{
-		height:420px;
+		min-height:420px;
+	}
+
+	aside{
+		position:relative;
 	}
 
 	.gamePicturesCard{
 
 		.pictureSlider{
-			@include vertical-align;
+			// @include vertical-align;
+			position:relative;
 			margin: 0 auto;
 			max-width:640px;
 			max-height:480px;
@@ -583,7 +594,7 @@ h3{
 			.pictureSliderArrow{
 				position:absolute;
 				display:inline-block;
-				width: 30px;
+				width: 40px;
 				height:100%;
 				font-size:2em;
 				text-shadow: 2px 2px 2px black;
@@ -612,7 +623,7 @@ h3{
 
 	.gamePlayCard{
 		.gameplayMovie{
-			@include vertical-align;
+			// @include vertical-align;
 			margin:1em auto;
 			max-width:480px;
 			min-width:240px;
@@ -943,7 +954,7 @@ input, button, textarea{
 	}
 
 	.psAbout{
-		background:url('skybg3_desktop.gif') bottom center no-repeat fixed;
+		background:url('skybg3_desktop.gif') top 70px center no-repeat fixed;
 		background-size:cover;
 	}
 
